Updated things in portfolio

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                  <span class="text-brand"></span>
              </h1>
              <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">
-                Hi there! I'm Sandeep Wadhawan. My technical skills include JavaScript, Core-Java, MySQL, OOPS and DBMS. Additionally, I am also proficient in HTML, CSS, and ReactJS. My aim is to develop impactful applications, contributing to the community, and continuously exploring new technologies to enhance my capabilities.
+                Hi there! I'm Sandeep Wadhawan, an aspiring Full Stack Developer with expertise in JavaScript, Core-Java, Node.js, MongoDB, and Express. Skilled in both front-end (HTML, CSS, ReactJS) and back-end technologies, I'm passionate about building impactful applications, contributing to the tech community, and continuously exploring new technologies to enhance my skills.
              </p>
            <div data-aos="fade-up" data-aos-delay="600">
-            <a href="./assets/cv/SandeepUpdatedResume(MERN).pdf" Class="btn btn-brand me-3g">Resume</a>
+            <a href="./assets/cv/SandeepWadhawanMERNResume(2024-2025).pdf" Class="btn btn-brand me-3g">Resume</a>
             <a href="#footer" class="link-custom"> Contact me </a>
            </div>
         </div>
@@ -73,7 +73,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script>
   let typed = new Typed(".text-brand", {
-    strings: ["JavaScript", "Core-Java", "ReactJS", "MySQL"],
+    strings: ["JavaScript", "Core-Java", "ReactJS", "MySQL", "NodeJS", "ExpressJS", "MongoDB"],
     typeSpeed: 200,
     backSpeed: 200,
     loop: true
@@ -125,8 +125,26 @@
            <div class="iconbox rounded-4">
             <i class="las la-object-group"></i>
            </div>
-           <h4 class="mt-4 mb-2">OOPS</h4>
-           <p>&#9733 &#9733 &#9733 &#9733 &#9734</p>
+           <h4 class="mt-4 mb-2">NodeJS</h4>
+           <p>&#9733 &#9733 &#9733 &#9734 &#9734</p>
+        </div>
+      </div>
+      <div class="col-md-4 mt-2 mb-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="skills p-4 bg-base rounded-4 shadow-effect">
+           <div class="iconbox rounded-4">
+            <i class="las la-object-group"></i>
+           </div>
+           <h4 class="mt-4 mb-2">ExpressJS</h4>
+           <p>&#9733 &#9733 &#9733 &#9734 &#9734</p>
+        </div>
+      </div>
+      <div class="col-md-4 mt-2 mb-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="skills p-4 bg-base rounded-4 shadow-effect">
+           <div class="iconbox rounded-4">
+            <i class="las la-object-group"></i>
+           </div>
+           <h4 class="mt-4 mb-2">MongoDB</h4>
+           <p>&#9733 &#9733 &#9733 &#9734 &#9734</p>
         </div>
       </div>
       <div class="col-md-4 mt-2 mb-4" data-aos="fade-up" data-aos-delay="400">
@@ -143,7 +161,7 @@
            <div class="iconbox rounded-4">
             <i class="lab la-react"></i>
            </div>
-           <h4 class="mt-4 mb-2">Github</h4>
+           <h4 class="mt-4 mb-2">Git and Github</h4>
            <p>&#9733 &#9733 &#9733 &#9734 &#9734</p>
         </div>
       </div>
@@ -239,7 +257,7 @@
             <p>Talk-a-tive is a Full Stack Chatting App. Uses Socket.io for real time communication and stores user details in encrypted
             format in Mongo DB Database.</p>
             <p>ReactJS | NodeJS | ExpressJS | MongoDB | Socket.io</p>
-            <p>2023</p>
+            <p>2024</p>
             <a href="https://github.com/sandycody/MERN-Chat-App-using-Socket.io" class="link-custom">Read More</a>
           </div>
         </div>
@@ -252,18 +270,19 @@
             </p>
             <p>ReactJS | TailwindCSS</p>
             <p>2024</p>
-            <a href="https://github.com/sandycody/Chai-aur-React/tree/main/10_TodoContextAPILocalStorage" class="link-custom">Read More</a>
+            <a href="https://github.com/sandycody/Todo-List-App-using-React/" class="link-custom">Read More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="500">
         <div class="card-custom rounded-4 bg-base shadow-effect">
           <div class="card-custom-content p-4">
-            <h4>Campus GIS</h4>
-            <p>This project is to develop a geospatial system that provides location-based services within the campus environment of BVICAM.</p>
-            <p>GeoServer | QGIS | JavaScript | CSS | HTML</p>
-            <p>2023</p>
-            <a href="https://github.com/sandycody/CAMPUS-GIS" class="link-custom">Read More</a>
+            <h4>Post-Burst</h4>
+            <p>Post-Burst is a dynamic social media web application, where users can create profiles, posts, and engage with content by liking their own posts as well as the posts of other users. The platform fosters interaction, making it easy for users to connect and express their appreciation for various posts
+            across the platform.</p>
+            <p>NodeJS | MongoDB | ExpressJS | ReactJS | Redux</p>
+            <p>2024</p>
+            <a href="https://github.com/sandycody/Post-Burst/" class="link-custom">Read More</a>
           </div>
         </div>
       </div>
